--- a/index.html
+++ b/index.html
@@ -9,34 +9,45 @@
   </head>
 
   <body>
-    <header>
-      <h1>Welcome to the AI Children's Short Story Generator</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>
+          Welcome to the AI Children's
+          <div>🧸 Short Story Generator 🧸</div>
+        </h1>
+      </header>
 
-    <main>
-      <form action="">
-        <input
-          type="text"
-          placeholder="Enter the topic of the children's story"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        The story will go here
-        <br />
-      </div>
-    </main>
+      <main>
+        <form action="">
+          <input
+            type="text"
+            placeholder="Enter the topic of the children's story"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="child-story">
+          The story will go here
+          <br />
+        </div>
+      </main>
 
-    <footer>
-      This project was coded by IggyT and is
-      <a href="//github.com/IggyTown/AI-child-short-story" target="_blank"
-        >opened-sourced on Github
-      </a>
-      and is <a>hosted on Netlify</a>.
-    </footer>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/IggyTown" target="_blank">IggyTown</a>
+        and is
+        <a href="//github.com/IggyTown/AI-child-short-story" target="_blank"
+          >opened-sourced on Github
+        </a>
+        and is
+        <a href="https://ai-child-short-story.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >.
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
