--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
 
     <title>AI Child's Short Story Generator</title>
@@ -18,7 +19,7 @@
       </header>
 
       <main>
-        <form action="">
+        <form id="story-generator-form">
           <input
             type="text"
             placeholder="Enter the topic of the children's story"
@@ -30,10 +31,7 @@
           <input type="submit" class="submit-button" />
         </form>
 
-        <div class="child-story">
-          The story will go here
-          <br />
-        </div>
+        <div class="child-story" id="child-story"></div>
       </main>
 
       <footer>
