--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             required
             autocomplete="off"
             class="instructions"
+            id="user-input"
           />
           <input type="submit" class="submit-button" />
         </form>
