further improved UX experience

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             />
             <input type="submit" class="submit-button" />
           </form>
-          <div class="example">e.g. a rabbit, a teddy bear, a dog</div>
+          <div class="example">
+            e.g. a rabbit <span class="emoji">🐰</span>, a teddy bear
+            <span class="emoji">🧸</span>, a dog <span class="emoji">🐶</span>
+          </div>
         </div>
         <div class="story hidden" id="story"></div>
       </main>
