--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
       <footer>
         This AI project was coded by
-        <a href="https://github.com/IggyTown" target="_blank">IggyTown</a>
+        <a href="https://github.com/IggyTown" target="_blank"
+          >Isabel Townsend</a
+        >
         and is
         <a href="//github.com/IggyTown/AI-child-short-story" target="_blank"
           >opened-sourced on Github
